update: simplify .env.example file comments

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# This is an example .env file for a Flask application.
-# Remove the `.example` suffix to use it.
+# This is an example .env file
+# Remove the .example suffix to use it
 
 MONGO_URI=mongodb://localhost:27017
